--- a/assignment1/index.html
+++ b/assignment1/index.html
@@ -238,10 +238,10 @@
     <img src="assets/Frame 2087325538.png" alt="">
 
     <div class="flex justify-center items-center gap-2 w-full">
-      <div class=" p-3 w-4/12">
+      <div class=" p-3 lg:w-4/12">
         <input type="email" placeholder="Enter your email address" class="w-full p-3 rounded-full border-2 border-gray-300 focus:outline-none focus:border-blue-500" id="">
       </div>
-      <div class="text-center lg:text-start w-2/12">
+      <div class="text-center lg:text-start lg:w-2/12">
         <a href="#" class="btn bg-[#D8FB78] border-black rounded-2xl text-2xl px-8 py-1 w-full">Subscribe</a>
       </div>
     </div>
