--- a/assignment1/index.html
+++ b/assignment1/index.html
@@ -22,15 +22,15 @@
 
 <body class="bg-[#F4F4F4]">
   <!-- Header start here  -->
-  <header class="container mx-auto manrope-normal">
+  <header class="container mx-auto manrope-normal pt-5">
     <nav>
       <div class="navbar">
         <div class="navbar-start">
           <!-- <p class="font-bold text-2xl text-black">Nerdy</p> -->
-           <img src="assets/test-removebg-preview.png" alt="">
+           <img class="w-5/12" src="assets/test-removebg-preview.png " alt="">
         </div>
-        <div class="navbar-center hidden lg:flex ">
-          <ul class="menu menu-horizontal px-1 text-xl manrope-normal ">
+        <div class="navbar-center items-center hidden lg:flex ">
+          <ul class="menu menu-horizontal px-1 text-xl manrope-normal r ">
             <li><a class="font-bold">Home</a></li>
             <li><a>Projects</a></li>
             <li><a>About</a></li>
