--- a/02 milestone/practice project 1/index.html
+++ b/02 milestone/practice project 1/index.html
@@ -1,20 +1,338 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
-    <title>project 2 milestone</title>
+    <title>PORTFOLIO PROJECT </title>
 </head>
+
 <body>
     <header>
-<h1 class="text-5xl">Hello</h1>
+        <!-- menu item  -->
+        <div class="bg-black text-white px-6 py-4 flex items-center justify-between  pl-16 pr-32">
+            <div class="text-lg font-bold">MOHAMMAD</div>
+            <nav class=" flex items-center space-x-6">
+                <a href="#home" class="hover:text-gray-400">Home</a>
+                <a href="#about" class="hover:text-gray-400">About Me</a>
+                <a href="#projects" class="hover:text-gray-400">Projects</a>
+                <a href="#testimonials" class="hover:text-gray-400">Testimonials</a>
+                <a href="#" class="bg-yellow-500 text-black px-4 py-2 rounded-full font-medium">
+                    Download CV
+                </a>
+            </nav>
+        </div>
+        <!-- hero section  -->
+        <div class="bg-black text-white px-6 py-4 flex items-center justify-between  pl-16 ">
+            <div class="w-1/2 space-y-5">
+                <p class="text-[#ffffff99]">Web Developer</p>
+                <h2 class="text-6xl uppercase">HI! This is <br><span class="text-[#EAB308] font-semibold">Md. Abdur
+                        Rahim</span></h2>
+                <p class="text-[#ffffff99]">As a web designer with four years of experience, I specialize in creating
+                    visually appealing and user-friendly websites. My expertise includes responsive design, UI/UX
+                    principles, and collaborating with clients to bring their visions to life.</p> <br>
+                <div class="flex items-center  ">
+                    <a href="#" class="bg-yellow-500 text-black px-4 py-2 rounded-full font-medium">
+                        Let’s Connect
+                    </a>
+                    <div class="flex">
+                        <a href="#" class="bg-black text-white px-4 py-2 rounded-full font-medium">
+                            View Portfolios
+                        </a>
+                        <img class="w-6 h-3 items-center mt-4" src="img/Arrow 7.png" alt="">
+
+                    </div>
+                </div>
+            </div>
+            <div><img class="w-full mt-5" src="img/mef.png" alt=""></div>
+        </div>
     </header>
     <main>
+        <!--  Specialties Section -->
+        <section class="bg-black text-white py-16 px-8">
+            <div class="text-center mb-12 ">
+                <h4 class="text-sm uppercase text-gray-400 tracking-wide">Specialties</h4>
+                <h2 class="text-4xl font-bold mt-2">My Specialties</h2>
+                <p class="text-gray-400 mt-4 max-w-2xl mx-auto">
+                    As a web designer with four years of experience, I specialize in creating visually appealing
+                    and user-friendly websites. My expertise includes responsive design.
+                </p>
+            </div>
+            <!-- Cards  -->
+            <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6 ">
+                <div class="bg-gray-900 p-6 rounded-lg text-center">
+                    <div class="text-4xl mb-4">
+                        <img src="img/1.png" alt="Icon" class="mx-auto w-12 h-12">
+                    </div>
+                    <h3 class="text-xl font-semibold mb-2">Front-End Development</h3>
+                    <p class="text-gray-400 text-sm">
+                        Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia
+                        consequat duis enim velit mollit.
+                    </p>
+                </div>
+                <div class="bg-gray-900 p-6 rounded-lg text-center">
+                    <div class="text-4xl mb-4">
+                        <img src="img/2.png" alt="Icon" class="mx-auto w-12 h-12">
+                    </div>
+                    <h3 class="text-xl font-semibold mb-2">Back-End Development</h3>
+                    <p class="text-gray-400 text-sm">
+                        Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia
+                        consequat duis enim velit mollit.
+                    </p>
+                </div>
+                <div class="bg-gray-900 p-6 rounded-lg text-center">
+                    <div class="text-4xl mb-4">
+                        <img src="img/3.png" alt="Icon" class="mx-auto w-12 h-12">
+                    </div>
+                    <h3 class="text-xl font-semibold mb-2">Full-Stack Development</h3>
+                    <p class="text-gray-400 text-sm">
+                        Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia
+                        consequat duis enim velit mollit.
+                    </p>
+                </div>
+                <div class="bg-gray-900 p-6 rounded-lg text-center">
+                    <div class="text-4xl mb-4">
+                        <img src="img/4.png" alt="Icon" class="mx-auto w-12 h-12">
+                    </div>
+                    <h3 class="text-xl font-semibold mb-2">Web Application Security</h3>
+                    <p class="text-gray-400 text-sm">
+                        Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia
+                        consequat duis enim velit mollit.
+                    </p>
+                </div>
+                <div class="bg-gray-900 p-6 rounded-lg text-center">
+                    <div class="text-4xl mb-4">
+                        <img src="img/5.png" alt="Icon" class="mx-auto w-12 h-12">
+                    </div>
+                    <h3 class="text-xl font-semibold mb-2">E-commerce Development</h3>
+                    <p class="text-gray-400 text-sm">
+                        Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia
+                        consequat duis enim velit mollit.
+                    </p>
+                </div>
+                <div class="bg-gray-900 p-6 rounded-lg text-center">
+                    <div class="text-4xl mb-4">
+                        <img src="img/6.png" alt="Icon" class="mx-auto w-12 h-12">
+                    </div>
+                    <h3 class="text-xl font-semibold mb-2">Cloud-Based Development</h3>
+                    <p class="text-gray-400 text-sm">
+                        Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia
+                        consequat duis enim velit mollit.
+                    </p>
+                </div>
+                <div class="bg-gray-900 p-6 rounded-lg text-center">
+                    <div class="text-4xl mb-4">
+                        <img src="img/7.png" alt="Icon" class="mx-auto w-12 h-12">
+                    </div>
+                    <h3 class="text-xl font-semibold mb-2">Progressive Web Apps</h3>
+                    <p class="text-gray-400 text-sm">
+                        Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia
+                        consequat duis enim velit mollit.
+                    </p>
+                </div>
+                <div class="bg-gray-900 p-6 rounded-lg text-center">
+                    <div class="text-4xl mb-4">
+                        <img src="img/8.png" alt="Icon" class="mx-auto w-12 h-12">
+                    </div>
+                    <h3 class="text-xl font-semibold mb-2">AI-Powered Development</h3>
+                    <p class="text-gray-400 text-sm">
+                        Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia
+                        consequat duis enim velit mollit.
+                    </p>
+                </div>
+            </div>
+        </section>
+        <!-- Recent work section -->
+        <section class="bg-black text-white py-16 px-8">
+            <div class="text-center mb-12">
+                <h4 class="text-sm uppercase text-gray-400 tracking-wide">Recent Works</h4>
+                <h2 class="text-4xl font-bold mt-2">My Recent Works</h2>
+                <p class="text-gray-400 mt-4 max-w-2xl mx-auto">
+                    As a web designer with four years of experience, I specialize in creating visually appealing
+                    and user-friendly websites. My expertise includes responsive design.
+                </p>
+            </div>
+            <!-- card  -->
+            <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
+                <div class="bg-gray-800 h-48 rounded-lg"></div>
+                <div class="bg-gray-800 h-48 rounded-lg"></div>
+                <div class="bg-gray-800 h-48 rounded-lg"></div>
+                <div class="bg-gray-800 h-48 rounded-lg"></div>
+                <div class="bg-gray-800 h-48 rounded-lg"></div>
+                <div class="bg-gray-800 h-48 rounded-lg"></div>
+            </div>
+        </section>
+        <!-- service section here  -->
+        <div class="bg-black text-white py-16 px-4">
+            <div class="max-w-5xl mx-auto text-center">
+                <h2 class="text-3xl font-bold uppercase tracking-wide mb-4">Services</h2>
+                <h3 class="text-4xl font-extrabold mb-6">My Other Services</h3>
+                <p class="text-gray-400 text-lg mb-12">
+                    As a web designer with four years of experience, I specialize in creating visually appealing and
+                    user-friendly websites. My expertise includes responsive design.
+                </p>
+                <!-- Services Grid -->
+                <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
+                    <div class="bg-gray-800 p-6 rounded-lg shadow-md">
+                        <h4 class="text-xl font-semibold mb-2">Website Development</h4>
+                        <p class="text-gray-400">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
+                            sint. Velit officia consequat duis enim velit mollit.</p>
+                    </div>
+                    <div class="bg-gray-800 p-6 rounded-lg shadow-md">
+                        <h4 class="text-xl font-semibold mb-2">E-Commerce Development</h4>
+                        <p class="text-gray-400">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
+                            sint. Velit officia consequat duis enim velit mollit.</p>
+                    </div>
+                    <div class="bg-gray-800 p-6 rounded-lg shadow-md">
+                        <h4 class="text-xl font-semibold mb-2">Web App Development</h4>
+                        <p class="text-gray-400">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
+                            sint. Velit officia consequat duis enim velit mollit.</p>
+                    </div>
+                    <div class="bg-gray-800 p-6 rounded-lg shadow-md">
+                        <h4 class="text-xl font-semibold mb-2">API Dev. & Integration</h4>
+                        <p class="text-gray-400">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
+                            sint. Velit officia consequat duis enim velit mollit.</p>
+                    </div>
+                    <div class="bg-gray-800 p-6 rounded-lg shadow-md">
+                        <h4 class="text-xl font-semibold mb-2">Cloud-Based Solutions</h4>
+                        <p class="text-gray-400">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
+                            sint. Velit officia consequat duis enim velit mollit.</p>
+                    </div>
+                    <div class="bg-gray-800 p-6 rounded-lg shadow-md">
+                        <h4 class="text-xl font-semibold mb-2">Web Perform. Optimization</h4>
+                        <p class="text-gray-400">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
+                            sint. Velit officia consequat duis enim velit mollit.</p>
+                    </div>
+                    <div class="bg-gray-800 p-6 rounded-lg shadow-md">
+                        <h4 class="text-xl font-semibold mb-2">(SEO) Services</h4>
+                        <p class="text-gray-400">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
+                            sint. Velit officia consequat duis enim velit mollit.</p>
+                    </div>
+                    <div class="bg-gray-800 p-6 rounded-lg shadow-md">
+                        <h4 class="text-xl font-semibold mb-2">Website Maint. & Support</h4>
+                        <p class="text-gray-400">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
+                            sint. Velit officia consequat duis enim velit mollit.</p>
+                    </div>
+                    <div class="bg-gray-800 p-6 rounded-lg shadow-md">
+                        <h4 class="text-xl font-semibold mb-2">Web App Development</h4>
+                        <p class="text-gray-400">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
+                            sint. Velit officia consequat duis enim velit mollit.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- FAQ section here -->
+        <div class="bg-black text-white py-16 px-4">
+            <div class="max-w-4xl mx-auto">
+                <h2 class="text-xl font-bold uppercase tracking-wide text-gray-400 mb-2">FAQ'S</h2>
+                <h3 class="text-4xl font-extrabold mb-8">Frequently Asked Questions</h3>
+                <div class="space-y-6">
+                    <div class="border-t border-gray-700 pt-4">
+                        <div class="flex justify-between items-center cursor-pointer">
+                            <h4 class="text-lg font-semibold">What areas of web development do you focus on?</h4>
+                            <span class="text-gray-400">▲</span>
+                        </div>
+                        <p class="text-gray-400 mt-2">I specialize in web development, creating websites that deliver
+                            unique user experiences.</p>
+                    </div>
 
+                    <div class="border-t border-gray-700 pt-4">
+                        <div class="flex justify-between items-center cursor-pointer">
+                            <h4 class="text-lg font-semibold">How can I schedule a web development consultation with
+                                you?</h4>
+                            <span class="text-gray-400">▼</span>
+                        </div>
+                    </div>
+                    <div class="border-t border-gray-700 pt-4">
+                        <div class="flex justify-between items-center cursor-pointer">
+                            <h4 class="text-lg font-semibold">Can I choose a specific platform for my website?</h4>
+                            <span class="text-gray-400">▼</span>
+                        </div>
+                    </div>
+                    <div class="border-t border-gray-700 pt-4">
+                        <div class="flex justify-between items-center cursor-pointer">
+                            <h4 class="text-lg font-semibold">What tools and technologies do you use for web
+                                development?</h4>
+                            <span class="text-gray-400">▼</span>
+                        </div>
+                    </div>
+                    <div class="border-t border-gray-700 pt-4">
+                        <div class="flex justify-between items-center cursor-pointer">
+                            <h4 class="text-lg font-semibold">Can I choose a specific platform for my website?</h4>
+                            <span class="text-gray-400">▼</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
-    <footer>
+    <footer class="bg-black text-white py-10">
+        <div class="max-w-7xl mx-auto px-4">
+            <div class="grid grid-cols-2 md:grid-cols-5 gap-6 text-center md:text-left mb-8">
+                <div>
+                    <h3 class="text-sm font-bold uppercase  text-gray-400 mb-3">Solutions</h3>
+                    <ul class="space-y-2">
+                        <li><a href="#" class="hover:underline">Glintopia</a></li>
+                        <li><a href="#" class="hover:underline">Fluxway</a></li>
+                        <li><a href="#" class="hover:underline">Fable's</a></li>
+                        <li><a href="#" class="hover:underline">Powercore</a></li>
+                    </ul>
+                </div>
+                <!-- Column 2 -->
+                <div>
+                    <h3 class="text-sm font-bold uppercase text-gray-400 mb-3">Customers</h3>
+                    <ul class="space-y-2">
+                        <li><a href="#" class="hover:underline">Glintopia</a></li>
+                        <li><a href="#" class="hover:underline">Fluxway</a></li>
+                        <li><a href="#" class="hover:underline">Fable's</a></li>
+                        <li><a href="#" class="hover:underline">Powercore</a></li>
+                    </ul>
+                </div>
+                <!-- Column 3 -->
+                <div>
+                    <h3 class="text-sm font-bold uppercase text-gray-400 mb-3">Partners</h3>
+                    <ul class="space-y-2">
+                        <li><a href="#" class="hover:underline">Glintopia</a></li>
+                        <li><a href="#" class="hover:underline">Fluxway</a></li>
+                        <li><a href="#" class="hover:underline">Fable's</a></li>
+                        <li><a href="#" class="hover:underline">Powercore</a></li>
+                    </ul>
+                </div>
+                <!-- Column 4 -->
+                <div>
+                    <h3 class="text-sm font-bold uppercase  text-gray-400 mb-3">Stakeholders</h3>
+                    <ul class="space-y-2">
+                        <li><a href="#" class="hover:underline">Glintopia</a></li>
+                        <li><a href="#" class="hover:underline">Fluxway</a></li>
+                        <li><a href="#" class="hover:underline">Fable's</a></li>
+                        <li><a href="#" class="hover:underline">Powercore</a></li>
+                    </ul>
+                </div>
+                <!-- Column 5 -->
+                <div>
+                    <h3 class="text-sm font-bold uppercase text-gray-400 mb-3">Offerings</h3>
+                    <ul class="space-y-2">
+                        <li><a href="#" class="hover:underline">Visions</a></li>
+                        <li><a href="#" class="hover:underline">Gatherings</a></li>
+                        <li><a href="#" class="hover:underline">Bizsphere</a></li>
+                    </ul>
+                </div>
+            </div>
 
+            <!-- Footer last part -->
+            <div class="border-t border-gray-700 pt-4 flex flex-col md:flex-row justify-between items-center">
+                <div class="text-sm text-gray-400">
+                    <a href="#">Terms & Conditions</a> |
+                    <a href="#">Privacy Policy</a>
+                </div>
+                <div class="text-sm text-gray-400 mt-4 md:mt-0">
+                    © 2024 All rights reserved.
+                </div>
+            </div>
+        </div>
     </footer>
+
 </body>
+
 </html>
